2006-12-15  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/main.c, src/sci_cb.c, src/sci_cb.h, src/symbols.c,
   src/symbols.h:
   Moved html_entities array to symbols.c.
   Fixed some checks for the new D lexer and improved detection of
   comments when auto completing or showing calltips.


2006-12-15  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/sci_cb.c:
   Only remove extra space indent after a multiline comment if the
   indent contains one too many spaces.
 * src/highlighting.c, data/filetypes.d:
   Show D typedefs in bold.
 * src/sci_cb.c, src/sci_cb.h, src/document.c:
   Fix setting project typenames for the new D lexer.
   Add sci_cb_lexer_is_c_like() which returns TRUE for C++/D lexers.
   Only recolourise C-like files when updating project typename
   keywords.


2006-12-14  Frank Lanitz  <frank@frank.uvena.de>

 * src/about.c: Fixed a typo.


2006-12-14  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/document.c:
   Fix updating the symbol list when a file is saved.
   Update C-like typedef keywords when reloading a file.
 * src/sci_cb.c:
   Fix adding a multiline comment character after pressing enter on the
   last line of a multiline comment.
   Remove multiline comment indent after pressing enter on last line.
   Prevent invalid memory reads in auto_multiline().


2006-12-13  Frank Lanitz  <frank@frank.uvena.de>

 * THANKS: Small update of contact data and small fix of translated
           language.


2006-12-13  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.h, src/about.c, src/treeviews.c, src/msgwindow.c,
   src/callbacks.c, src/keyfile.c, src/document.c, src/prefs.c,
   src/main.c, src/ui_utils.c:
   Fix memory leaks when using GdkPixbuf, PangoFontDescription and some
   strings.
   Capitalize main window title.
   Add ui_widget_modify_font_from_string().
 * src/build.c, src/keybindings.c, src/msgwindow.c, src/msgwindow.h,
   src/vte.c, src/main.c: